Geometry Nodes: Node groups not created during current session won't have datablock selector #111174

Closed
opened 2023-08-16 11:40:57 +02:00 by Ludvik Koutny · 14 comments
Contributor

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 536.99

Blender Version
Broken: version: 3.6.1, branch: blender-v3.6-release, commit date: 2023-07-17 12:50, hash: 8bda729ef4dc
Worked: (newest version of Blender that worked as expected)

Short description of error
See the attached video:

Exact steps for others to reproduce the error

  1. Have an asset library which has some node groups in it
  2. Open new empty .blend file, select default cube, switch to GN node editor and create new Geometry Nodes
  3. Add a node group from the library
    Result: The node group added from the library is missing a datablock selector, and even copying it doesn't make the selector appear.
    Expected: The datablock selector is always consistently present, regardless of if the node group was created during current blender session or not.
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 536.99 **Blender Version** Broken: version: 3.6.1, branch: blender-v3.6-release, commit date: 2023-07-17 12:50, hash: `8bda729ef4dc` Worked: (newest version of Blender that worked as expected) **Short description of error** See the attached video: <video src="/attachments/d69484e7-bfce-4ef7-b519-130ff278e638" title="2023-08-16_11-36-09.mp4" controls></video> **Exact steps for others to reproduce the error** 1. Have an asset library which has some node groups in it 2. Open new empty .blend file, select default cube, switch to GN node editor and create new Geometry Nodes 3. Add a node group from the library Result: The node group added from the library is missing a datablock selector, and even copying it doesn't make the selector appear. Expected: The datablock selector is always consistently present, regardless of if the node group was created during current blender session or not.
Ludvik Koutny added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-08-16 11:40:57 +02:00
Member

Thanks for the report. I can confirm

Thanks for the report. I can confirm
Member

Dropping nodegroup from asset browser generates the "name" field.

Dropping nodegroup from asset browser generates the "name" field.
Iliya Katushenock changed title from GN node groups not created during current session won't have datablock selector to Geometry Nodes: Node groups not created during current session won't have datablock selector 2023-08-17 20:01:45 +02:00

I'm sorry, but the report is badly done. Are you talking about the lack of a ID-prop field? It is hidden by design, and can be switched by operators:
image

I'm sorry, but the report is badly done. Are you talking about the lack of a ID-prop field? It is hidden by design, and can be switched by operators: ![image](/attachments/302b1e34-a1e7-4d2d-86e9-845b972ac5dd)
Author
Contributor

I'm sorry, but the report is badly done. Are you talking about the lack of a ID-prop field? It is hidden by design, and can be switched by operators:
image

Yes, why is the state of node options visibility different based on if the node is added from the add menu, dragged from the blender file mode Outliner, or created by Make Group operator? If you say it's by design, then there needs to be some logical design to begin with.

> I'm sorry, but the report is badly done. Are you talking about the lack of a ID-prop field? It is hidden by design, and can be switched by operators: > ![image](/attachments/302b1e34-a1e7-4d2d-86e9-845b972ac5dd) Yes, why is the state of node options visibility different based on if the node is added from the add menu, dragged from the blender file mode Outliner, or created by Make Group operator? If you say it's by design, then there needs to be some logical design to begin with.

image

In any case, this is not a bug, so I'll close it.
For more information on why this isn't considered a bug, visit: https://wiki.blender.org/wiki/Reference/Not_a_bug

![image](/attachments/60465f80-a4d8-4528-9915-34a414cff01e) In any case, this is not a bug, so I'll close it. For more information on why this isn't considered a bug, visit: https://wiki.blender.org/wiki/Reference/Not_a_bug
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-08-17 22:25:38 +02:00
Member

Thanks @mod_moder :)
Still behavior should be consistent when you drop it from asset browser and when added from context menu.

Thanks @mod_moder :) Still behavior should be consistent when you drop it from asset browser and when added from context menu.

Yeah, I agree too. Why is the behavior different when drag+drop assets from the asset browser vs. using the search menu?

Yeah, I agree too. Why is the behavior different when drag+drop assets from the asset browser vs. using the search menu?
Blender Bot added
Status
Needs Triage
and removed
Status
Archived
labels 2023-08-18 07:06:01 +02:00
Jesse Yurkovich added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-08-18 07:06:19 +02:00
Member

Possible fix is up here #111427

Possible fix is up here #111427
Author
Contributor

Possible fix is up here #111427

I am really confused. How is that a fix? The issue here is that there was inconsistency where sometimes added node group would be missing datablock selector. Instead of fixing that inconsistency, the patch seems to turn it into a feature. That seems bad. Instead of fixing inconsistent behavior and having something user can rely on, we are now offloading a duty onto user to manage the behavior of the inconsistency.

The problem here was increased mental load associated with inconsistent behavior when nodes are created. The "fix" further aggravates that problem it by increasing that mental load even further.

The problem is that instead of remembering:
"node groups have datablock selectors"
User now needs to remember:
"Node groups have datablock selectors unless they have originated from asset library but not always since there's also now toggle that changes that behavior and that toggle has certain default value in a property somewhere."

The logic behind this decision still remains unexplained? Why would assets from the asset editor be any special snowflakes that should have their datablock selector hidden? Blender's UI is overloaded with datablock selectors left and right, but suddenly, for assets specifically, we can't trust users to use them right or expect that users will be confused by them?

Instead of a nice patch that improves consistency of behavior by deleting couple of lines, we have now patch that adds 14 more without fixing anything :(

> Possible fix is up here #111427 I am really confused. How is that a fix? The issue here is that there was inconsistency where sometimes added node group would be missing datablock selector. Instead of fixing that inconsistency, the patch seems to turn it into a feature. That seems bad. Instead of fixing inconsistent behavior and having something user can rely on, we are now offloading a duty onto user to manage the behavior of the inconsistency. The problem here was increased mental load associated with inconsistent behavior when nodes are created. The "fix" further aggravates that problem it by increasing that mental load even further. The problem is that instead of remembering: "node groups have datablock selectors" User now needs to remember: "Node groups have datablock selectors unless they have originated from asset library but not always since there's also now toggle that changes that behavior and that toggle has certain default value in a property somewhere." The logic behind this decision still remains unexplained? Why would assets from the asset editor be any special snowflakes that should have their datablock selector hidden? Blender's UI is overloaded with datablock selectors left and right, but suddenly, for assets specifically, we can't trust users to use them right or expect that users will be confused by them? Instead of a nice patch that improves consistency of behavior by deleting couple of lines, we have now patch that adds 14 more without fixing anything :(
Member

That toggle wont be visible, but OK, if that seems more inconsistent to you then I will gladly forwards this to the original authors to have them reason here

CC @HooglyBoogly
CC @dfelinto
CC @JulianEisel

That toggle wont be visible, but OK, if that seems more inconsistent to you then I will gladly forwards this to the original authors to have them reason here CC @HooglyBoogly CC @dfelinto CC @JulianEisel
Member

Hiding the data-block selector for node groups added as assets is done on purpose. The idea is to make node groups more similar to builtin nodes. Node groups added as assets are used more like higher-level builtin nodes anyway, where changing the node group they refer to is rarely necessary.

Phlipp's PR does improve consistency, because now that logic is applied whenever adding a node group from an asset.

Hiding the data-block selector for node groups added as assets is done on purpose. The idea is to make node groups more similar to builtin nodes. Node groups added as assets are used more like higher-level builtin nodes anyway, where changing the node group they refer to is rarely necessary. Phlipp's PR does improve consistency, because now that logic is applied whenever adding a node group from an asset.
Author
Contributor

Hiding the data-block selector for node groups added as assets is done on purpose. The idea is to make node groups more similar to builtin nodes. Node groups added as assets are used more like higher-level builtin nodes anyway, where changing the node group they refer to is rarely necessary.

Phlipp's PR does improve consistency, because now that logic is applied whenever adding a node group from an asset.

This just doesn't make sense to me. It just presses the "Toggle node options" button internally. It's hardly worth it, as it just obscures what's happening and introduces learning curve. New user will be confused by why some node groups have that UI element while others don't' and will likely initially conclude that there are two distinct types of node groups, given how hidden away the toggle node options operator is. People who usually use it use it more or less by accident, as it doesn't do anything particularly useful. This is unfortunate example of having more code to do something users most likely don't want.

As I wrote above, these exceptions to the rule just increase mental overhead when using Blender, and Blender can't really afford that because it's already way above average in terms of mental overhead required in daily use.

> Hiding the data-block selector for node groups added as assets is done on purpose. The idea is to make node groups more similar to builtin nodes. Node groups added as assets are used more like higher-level builtin nodes anyway, where changing the node group they refer to is rarely necessary. > > Phlipp's PR does improve consistency, because now that logic is applied whenever adding a node group from an asset. This just doesn't make sense to me. It just presses the "Toggle node options" button internally. It's hardly worth it, as it just obscures what's happening and introduces learning curve. New user will be confused by why some node groups have that UI element while others don't' and will likely initially conclude that there are two distinct types of node groups, given how hidden away the toggle node options operator is. People who usually use it use it more or less by accident, as it doesn't do anything particularly useful. This is unfortunate example of having more code to do something users most likely don't want. As I wrote above, these exceptions to the rule just increase mental overhead when using Blender, and Blender can't really afford that because it's already way above average in terms of mental overhead required in daily use.

This is working as expected and designed. Just to reiterate on the design:

Asset node-groups should be (almost) indistinguishable from built-in nodes. They are effectively intended to different goals than local node groups: they are mainly meant to be used, not edited, explored inside.

As such having them looking a bit different than the other node groups is welcome (intentional even in this case).

This is working as expected and designed. Just to reiterate on the design: Asset node-groups should be (almost) indistinguishable from built-in nodes. They are effectively intended to different goals than local node groups: they are mainly meant to be used, not edited, explored inside. As such having them looking a bit different than the other node groups is welcome (intentional even in this case).
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-08-24 10:44:01 +02:00
Author
Contributor

This is working as expected and designed. Just to reiterate on the design:

Asset node-groups should be (almost) indistinguishable from built-in nodes. They are effectively intended to different goals than local node groups: they are mainly meant to be used, not edited, explored inside.

As such having them looking a bit different than the other node groups is welcome (intentional even in this case).

Following that logic you should also disable ability to enter node group asset, as the user could simply press the Tab key and realize it's been a regular node group all along. They will be able to see right through the deception.

Seriously, pretending that asset node groups are something else just adds learning curve, impedes learning and increases confusion. Instead of user quickly learning Blender has a simple concept of node groups, and that node groups can also be asset-ized, you are intentionally misleading them into believing asset node groups are different types of node groups, even though all you are doing during creation of the asset node group is running an operator under the hood, but only for one specific node type (group) in one specific scenario (being marked as asset).

This logic is so flawed, because some similar parts of Blender are so deeply technical the user just can't get away with not understanding how data blocks work. Yet you somehow believe that in the particular combination of a node group and asset factors, the user has to be protected from the complexity of seeing a datablock selector.

Hiding datablock selector doesn't make node groups indistinguishable from built-in nodes to anyone who spent more than a day with a node editor in Blender as the node types have color coded headers. What it does make asset nodes groups, though, is indistinguishable from having bugged datablock display.

You are just increasing blender's already overwhelming UX debt.

> This is working as expected and designed. Just to reiterate on the design: > > Asset node-groups should be (almost) indistinguishable from built-in nodes. They are effectively intended to different goals than local node groups: they are mainly meant to be used, not edited, explored inside. > > As such having them looking a bit different than the other node groups is welcome (intentional even in this case). Following that logic you should also disable ability to enter node group asset, as the user could simply press the Tab key and realize it's been a regular node group all along. They will be able to see right through the deception. Seriously, pretending that asset node groups are something else just adds learning curve, impedes learning and increases confusion. Instead of user quickly learning Blender has a simple concept of node groups, and that node groups can also be asset-ized, you are intentionally misleading them into believing asset node groups are different types of node groups, even though all you are doing during creation of the asset node group is running an operator under the hood, but only for one specific node type (group) in one specific scenario (being marked as asset). This logic is so flawed, because some similar parts of Blender are so deeply technical the user just can't get away with not understanding how data blocks work. Yet you somehow believe that in the particular combination of a node group and asset factors, the user has to be protected from the complexity of seeing a datablock selector. Hiding datablock selector doesn't make node groups indistinguishable from built-in nodes to anyone who spent more than a day with a node editor in Blender as the node types have color coded headers. What it does make asset nodes groups, though, is indistinguishable from having bugged datablock display. You are just increasing blender's already overwhelming UX debt.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111174
No description provided.